# TestHeroku

./: .gitignore  HComunio.cabal  Import.hs  Procfile  README.md  TestHeroku.cabal  devel.hs
Handler/: Home.hs
Imports/Parser/: ParseComunio.hs  gameday22.html  gameday23.html  gameday24.html  gameday25.hamlet  test.hamlet
app/.cabal/: config
config/: keter.yaml  routes
templates/: diff.hamlet  gameday.hamlet  gameday.lucius  gameday25.hamlet  homepage.hamlet  style.hs
