name:              HComunio
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                == 1.1.7.2
                 --, yesod
                -- , yesod-core                    >= 1.1.7      && < 1.2
                 , ansi-terminal                 >= 0.5.5.1    && < 0.5.5.2
                 , attoparsec                    >= 0.10.3     && < 0.10.4
                 , attoparsec-conduit            >= 0.5.0.3    && < 0.5.4
                 , blaze-builder-conduit         >= 0.5.0.3    && < 0.5.4
                 , zlib-conduit                  >= 0.5.0.3    && < 0.5.4
                 , network-conduit               >= 0.6.2.2    && < 0.6.3
                 , monad-logger                  >= 0.2.3.2    && < 0.2.4
                 , crypto-conduit                >= 0.4.3      && < 0.4.4
                 , crypto-api                    >= 0.10.2     && < 0.10.3
                 , conduit                       >=0.5         && < 0.6
                 , aeson                         >= 0.6.1.0    && < 0.6.2
                 , base64-bytestring             >= 1.0.0.0    && < 1.0.0.1
                 , blaze-html                    >= 0.5.1.3    && < 0.5.1.4
                 , case-insensitive              >= 0.4.0.4    && < 0.4.0.5
                 , hashable                      >= 1.2.0.5    && < 1.2.0.6
                 , mime-types                    == 0.1.0.2
                 , shakespear                    == 1.0.2
                 , yesod-static                  >= 1.1.1.2    && < 1.2
                 , yesod-default                 >= 1.1.3      && < 1.2
                 --, yesod-form                    >= 1.1        && < 1.3
                 , clientsession                 >= 0.8.1      && < 0.9
                 --, bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 --, template-haskell
                 , hamlet                        >= 1.1.3.1    && < 1.1.3.2
                 --, shakespeare-css               >= 1.0        && < 1.1
                 --, shakespeare-js                >= 1.0        && < 1.2
                 --, shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                          >= 0.0.1    && < 0.2
                 --, monad-control                 >= 0.3        && < 0.4
                 , wai-extra                       >= 1.3.2      && < 1.3.3
                 --, yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.8.7        && < 1.8.7.1
                 , http-types                    == 0.7.3.0.1
                 --, directory                     >= 1.1        && < 1.3
                -- , warp                          >= 1.3        && < 1.4
                 , data-default                    >= 0.5.0    && < 0.5.1

executable         HComunio
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , HComunio
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , HComunio
                 , yesod-test
                 , yesod-default
                 , yesod-core
