name:              HComunio
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                <= 1.1.7.2
                 -- , aeson                         == 0.6.1.0
--                  , ansi-terminal                 == 0.5.5.1
--                  , attoparsec                    == 0.10.3.0
                 , attoparsec-conduit            == 0.5.0.3
--                  , base64-bytestring             == 1.0.0.0
                 , blaze-builder-conduit         == 0.5.0.3
--                  , blaze-html                    == 0.5.1.3
--                  , case-insensitive              == 0.4.0.4
--                  , clientsession                 == 0.8.1
                 , conduit                       == 0.5.6
--                  , crypto-conduit                == 0.4.3
--                  , crypto-api                    == 0.10.2
--                  , data-default                  == 0.5.0
--                  , hamlet                        == 1.1.3.1
--                  , hashable                      == 1.2.0.5
--                  , hjsmin                        == 0.1.4
                 , http-conduit                  >= 1.8.7
--                  , http-types                    == 0.7.3.0.1
--                  , network-conduit               == 0.6.2.2
--                  , mime-types                    == 0.1.0.2
--                  , monad-logger                  == 0.2.3.2
--                  , shakespear-js                 == 1.1.1
--                  , yesod-static                  == 1.1.1.2
--                  , yesod-default                 >= 1.1.3
-- --                 , text                          == 0.11
--                  , wai-extra                     == 1.3.2
                 , zlib-conduit                  == 0.5.0.3

executable         HComunio
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , HComunio
                     --, yesod-default

    ghc-options:       -threaded -O2
