name:              HComunio
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                == 1.1.7.2
                 , aeson                         >= 0.6
--                  , ansi-terminal                 == 0.5.5.1
                 -- , asn1-data                     == 0.7.1
                 , attoparsec                    == 0.10.3.0
                 -- , attoparsec-conduit            == 0.5.0.3
                 , base64-bytestring             == 1.0.0.0
                 , blaze-builder-conduit         == 0.5.0.3
                 , blaze-html                    >= 0.5
                 , blaze-markup                  >= 0.5.1      && < 0.6
                 , bytestring                    >= 0.9.1.4
                 -- , case-insensitive              == 0.4.0.4
                 -- , certificate                   == 1.3.5
                 -- , clientsession                 == 0.8.1
                 -- , conduit                       >= 0.5
                 , containers                    >= 0.2
                 -- , cprng-aes                     == 0.3.4
--                  , crypto-conduit                == 0.4.3
                 -- , cryptohash                    == 0.8.3
                 -- , crypto-api                    == 0.10.2
                 -- , data-default                  == 0.5.0
                 , directory                     >= 1.0
                 , file-embed
                 , filepath                      >= 1.1
                 , fsnotify                      >= 0.0
                 , ghc                           >= 7.0.3      && < 7.8
                 , ghc-paths                     >= 0.1
                 , hamlet                        >= 1.1
                 , hashable                      == 1.2.0.5
                 , hjsmin                        == 0.1.4
                 , http-conduit                  == 1.8.7
                 , http-reserve-proxy            >= 0.1.1
                 , http-types                    == 0.7.3.0.1
                 , lifted-base
                 , monad-control                 >= 0.3
                 , network
                 , network-conduit
                 -- , mime-types                    == 0.1.0.2
--                  , monad-logger                  == 0.2.3.2
                 , optparse-applicative          >= 0.4
                 , parsec                        >= 2.1       && < 4
                 , process
                 , project-template              >= 0.1.1
                 , resourcet                     >= 0.3       && < 0.5
                 , shakespeare                   >= 1.0.2     && < 1.1
                 , shakespeare-css               >= 1.0.2     && < 1.1
                 , shakespeare-js                >= 1.0.2     && < 1.2
                 , shakespeare-text              >= 1
                 -- , socks                         == 0.4.2
                 , split                         >= 0.2
                 , system-fileio                 >= 0.3
                 , system-filepath               >= 0.4
                 , tar                           >= 0.4
                 , template-haskell
                 , text                          >= 0.11
                 , time                          >= 1.1.4
                 , transformers                  >= 0.2.2     && < 0.4
                 , unix-compat                   >= 0.2       && < 0.5
                 , unordered-containers
                 , wai                           >= 1.3
                 , wai-extra                     >= 1.3
                 , warp                          >= 1.3
                 -- , tls                           == 1.1.1
                 -- , tls-extra                     == 0.6.1
                 , yaml                          >= 0.8
                 , yesod                         >= 1.1.7.2
                 , yesod-auth                    >= 1.1
                 , yesod-core                    >= 1.1.5     && < 1.2
                 , yesod-default                 >= 1.1.3     && < 1.2
                 , yesod-form                    >= 1.1       && < 1.3
                 , yesod-json                    >= 1.1
                 , yesod-persistent              >= 1.1
                 -- , zlib-conduit                  == 0.5.0.3
                 , zlib                          >= 0.5

executable         HComunio
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , HComunio
                     , yesod-default

    ghc-options:       -threaded -O2 -v
