name:              TestHeroku
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , aeson == 0.6.1.0
                 , attoparsec == 0.10.3.0
                 , base-unicode-symbols == 0.2.2.4
                 , base64-bytestring == 1.0.0.0
                 , base64-conduit == 0.5.1
                 , blaze-builder == 0.3.1.0
                 , blaze-builder-conduit == 0.5.0.3
                 , blaze-html == 0.5.1.3
                 , blaze-markup == 0.5.1.4
                 , bytestring == 0.9.2.1
                 , case-insensitive == 0.4.0.4
                 , cereal == 0.3.5.2
                 , classy-prelude == 0.4.3
                 , clientsession == 0.8.1
                 , conduit == 0.5.6
                 , containers == 0.4.2.1
                 , cookie == 0.4.0.1
                 , crypto-api == 0.10.2
                 , crypto-conduit == 0.4.3
                 , cryptohash == 0.8.3
                 , data-default == 0.5.0
                 , directory == 1.1.0.2
                 , failure == 0.2.0.1
                 , fast-logger == 0.3.1
                 , file-embed == 0.0.4.7
                 , filepath == 1.3.0.0
                 , fsnotify == 0.0.6
                 , ghc-paths == 0.1.0.9
                 -- , ghc-prim == 0.2.0.0
                 , hamlet == 1.1.3.1
                 , hinotify == 0.3.5
                 , hjsmin == 0.1.4
                 , http-conduit == 1.8.7
                 , http-date == 0.0.4
                 , http-reverse-proxy == 0.1.1.3
                 , http-types == 0.7.3.0.1
                 -- , integer-gmp == 0.2.0.0
                 , lifted-base == 0.2.0.2
                 , monad-control == 0.3.1.4
                 , monad-logger == 0.2.3.2
                 , mtl == 2.1.2
                 , network == 2.4.1.0
                 , network-conduit == 0.6.2.2
                 , optparse-applicative == 0.5.2.1
                 , path-pieces == 0.1.2
                 , parsec == 3.1.3
                 , primitive == 0.5.0.1
                 , process == 1.1.0.1
                 , project-template == 0.1.1
                 , random == 1.0.1.1
                 , resourcet == 0.4.4
                 -- , rts == 1.0
                 , safe == 0.3.3
                 , shakespeare == 1.0.2
                 , shakespeare-css == 1.0.2
                 , shakespeare-i18n == 1.0.0.2
                 , shakespeare-js == 1.1.1
                 , shakespeare-text == 1.0.0.5
                 , split == 0.2.1.1
                 , system-fileio == 0.3.11
                 , system-filepath == 0.4.7
                 , tar == 0.4.0.1
                 , transformers == 0.3.0.0
                 , transformers-base == 0.4.1
                 , template-haskell
                 , text == 0.11.2.3
                 , unix == 2.5.1.1
                 , unix-compat == 0.4.1.0
                 , unix-time == 0.1.4
                 , unordered-containers == 0.2.3.0
                 , vector == 0.10.0.1
                 , wai == 1.3.0.1
                 , wai-app-static == 1.3.1
                 , wai-extra == 1.3.2
                 , warp == 1.3.7.1
                 , word8 == 0.0.3
                 , yaml == 0.8.2
                 , yesod == 1.1.9
                 , yesod-core
                 , yesod-default
                 , yesod-routes
                 , yesod-static
                 , zlib == 0.5.4.0
                 , ghc == 7.4.1
                 -- , yesod-auth == 1.1.3
                 -- , yesod-core == 1.1.7.1
                 -- , yesod-default == 1.1.3
                 -- , yesod-form == 1.2.0.2
                 -- , yesod-static == 1.1.1.2
                 -- , yesod-test == 0.3.3
                 -- , clientsession == 0.8.1
                 -- , bytestring == 0.9.2.1
                 -- , text == 0.11.2.3
                 -- , persistent == 1.0.2.2
                 -- , persistent-sqlite == 1.0.1
                 -- , template-haskell == 2.7.0.0
                 -- , hamlet == 1.1.3.1
                 -- , shakespeare == 1.0.2
                 -- , shakespeare-css == 1.0.2
                 -- , shakespeare-js == 1.1.1
                 -- , shakespeare-text == 1.0.0.5
                 -- , hjsmin == 0.1.4
                 -- , monad-control == 0.3.1.4
                 -- , wai-extra == 1.3.2
                 -- , yaml == 0.8.2
                 -- , http-conduit == 1.6.1.2
                 -- , directory == 1.1.0.2
                 -- , warp == 1.3.7.1
                 -- , data-default == 0.5.0
                 -- , certificate == 1.2.8
                 -- , crypto-pubkey-types == 0.1.1
                 -- , crypto-api == 0.10.2
                 -- , cprng-aes == 0.2.5
                 -- , cpu == 0.1.1
                 -- , cryptocipher == 0.3.5
                 -- , persistent-template == 1.0.0.2
                 -- , tls == 0.9.11
                 -- , tls-extra == 0.4.7.1
                 -- , authenticate == 1.3.2.6
                 -- , http-reverse-proxy == 0.1.1.3
                 -- , yesod-json == 1.1.2
                 -- , xml-conduit == 1.0.3.3
                 -- , wai == 1.3.0.1
                 -- , ghc-paths == 0.1.0.8
                 -- , tar == 0.4.0.1
                 -- , optparse-applicative == 0.4.3
executable         TestHeroku

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , TestHeroku
                     , yesod-default
                     , ghc

    ghc-options:       -threaded -O2
