name:              TestHeroku
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

-- library
--     exposed-modules: Application
--                      Foundation
--                      Import
--                      Settings
--                      Settings.StaticFiles
--                      Settings.Development
--                      Handler.Home

--     ghc-options:   -Wall -O2

--     extensions: TemplateHaskell
--                 QuasiQuotes
--                 OverloadedStrings
--                 NoImplicitPrelude
--                 CPP
--                 MultiParamTypeClasses
--                 TypeFamilies
--                 GADTs
--                 GeneralizedNewtypeDeriving
--                 FlexibleContexts
--                 EmptyDataDecls
--                 NoMonomorphismRestriction

--     build-depends: base
--                  , shakespeare == 1.0.2
--                  , shakespeare-js == 1.1.1
--                  , yesod  == 1.1.9
--                  , yesod-static == 1.1.1.2
--                  , yesod-routes == 1.1.1.1
--                  , yesod-persistent == 1.1.0.1
--                  , yesod-core == 1.1.7.1
--                  , yesod-json == 1.1.2
--                  -- , yesod-default == 1.1.3
--                  , blaze-html == 0.5.1.3
--                  , text == 0.11.2.3
--                  , template-haskell
--                  , shakespeare-text == 1.0.0.5
--                  , clientsession == 0.8.1
--                  , hjsmin == 0.1.4
--                  , http-conduit == 1.8.7
--                  , wai-extra == 1.3.2
--                  , attoparsec-conduit == 0.5.0.3
--                  , conduit == 0.5.6
--                  , crypto-api == 0.10.2
--                  , http-types == 0.7.3.0.1
--                  , hamlet == 1.1.3.1
--                  , data-default == 0.5.0
--                  , yaml == 0.8.2

executable         TestHeroku

    main-is:           app/main.hs
    build-depends:     base          == 4.5.*
                     , shakespeare == 1.0.2
                     , shakespeare-js == 1.1.1
                     , yesod  == 1.1.9
                     , yesod-static == 1.1.1.2
                     , yesod-routes == 1.1.1.1
                     , yesod-persistent == 1.1.0.1
                     , yesod-core == 1.1.7.1
                     , yesod-json == 1.1.2
                     , yesod-default == 1.1.3
                     , blaze-html == 0.5.1.3
                     , text == 0.11.2.3
                     , template-haskell
                     , shakespeare-text == 1.0.0.5
                     , clientsession == 0.8.1
                     , hjsmin == 0.1.4
                     , http-conduit == 1.8.7
                     , wai-extra == 1.3.2
                     , attoparsec-conduit == 0.5.0.3
                     , conduit == 0.5.6
                     , crypto-api == 0.10.2
                     , http-types == 0.7.3.0.1
                     , hamlet == 1.1.3.1
                     , data-default == 0.5.0
                     , yaml == 0.8.2
                     , base-unicode-symbols == 0.2.2.4
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    ghc-options:       -threaded -O2
